# UmbraNote

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh
.github/workflows/: ci.yml
core/: CMakeLists.txt  crypto.cpp  crypto_v3.cpp  pdf_export.cpp  secure_memory.cpp  text_codec.cpp
core/include/zeronote/: crypto.h  crypto_internal.h  pdf_export.h  secure_memory.h  text_codec.h
docs/: ENCRYPTION_V3_DESIGN.md  FILE_FORMATS.md  RELEASE_SIGNING.md  SECURITY.md  SHA256SUMS  SHA256SUMS.asc  UmbraNote_Local_Code_Signing_2026.cer  UmbraNote_Release_Signing_2026_pubkey.asc
platform/linux/: CMakeLists.txt  main.cpp
platform/win32/: CMakeLists.txt  app.manifest  main.cpp  notepad.cpp  notepad.h  resource.h  resource.rc
releases/linux/: UmbraNote-1.2-1.x86_64.rpm  UmbraNote-1.2-1.x86_64.rpm.asc  UmbraNote_1.2_amd64.deb  UmbraNote_1.2_amd64.deb.asc  umbranote  umbranote.asc
releases/macos/: UmbraNote_1.2_aarch64.dmg.asc
releases/windows/: UmbraNote.exe.asc
scripts/: build-linux.sh  build-windows.bat  init-release-key.bat  init-release-key.sh  sign-release.bat  sign-release.sh
tests/: CMakeLists.txt  crypto_v3_test.cpp  generate_fixtures.cpp
tests/fixtures/: v1_golden.hex  v2_golden.hex
